# django-litemon

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/django_litemon/: apps.py  views.py
src/django_litemon/templates/: index.html
tests/: settings.py  urls.py
tests/test_app/: views.py
